--- a/code/html/index.html
+++ b/code/html/index.html
@@ -9,43 +9,31 @@
           <h1 id="slowButton" class="button">Slow</h1>
           <h1 id="goButton" class="button">Go</h1>
         </div>
-        <div id="traffic-light">
+        <div id="traffic-light-yn">
           Y-Stoplight-North
-          <div id="stopLight" class="bulb"></div>
-          <div id="slowLight" class="bulb"></div>
-          <div id="goLight" class="bulb"></div>
+          <div id="stopLight-yn" class="bulb"></div>
+          <div id="slowLight-yn" class="bulb"></div>
+          <div id="goLight-yn" class="bulb"></div>
         </div>
-      <!--<div id="controlPanel">
-        <h1 id="stopButton" class="button">Stop</h1>
-        <h1 id="slowButton" class="button">Slow</h1>
-        <h1 id="goButton" class="button">Go</h1>
-      </div>
-      <div id="traffic-light">
-          Y-Stoplight-East
-        <div id="stopLight" class="bulb"></div>
-        <div id="slowLight" class="bulb"></div>
-        <div id="goLight" class="bulb"></div>
-      </div>
-      <p>
-      <div id="controlPanel">
-        <h1 id="stopButton" class="button">Stop</h1>
-        <h1 id="slowButton" class="button">Slow</h1>
-        <h1 id="goButton" class="button">Go</h1>
-      </div>
-      <div id="traffic-light">
+        <div class="clear">     
+          <div id="traffic-light-xe">
+            X-Stoplight-East
+            <div id="stopLight-xe" class="bulb"></div>
+            <div id="slowLight-xe" class="bulb"></div>
+            <div id="goLight-xe" class="bulb"></div>
+          </div>
+        </div>
+      <div id="traffic-light-xw">
           X-Stoplight-West
-        <div id="stopLight" class="bulb"></div>
-        <div id="slowLight" class="bulb"></div>
-        <div id="goLight" class="bulb"></div>
+        <div id="stopLight-xw" class="bulb"></div>
+        <div id="slowLight-xw" class="bulb"></div>
+        <div id="goLight-xw" class="bulb"></div>
       </div>
-      <div id="controlPanel">
-        <h1 id="stopButton" class="button">Stop</h1>
-        <h1 id="slowButton" class="button">Slow</h1>
-        <h1 id="goButton" class="button">Go</h1>
-      </div>
-      <div id="traffic-light">
+      <div class="clear"> 
+      <div id="traffic-light-ys">
           Y-Stoplight-South
-        <div id="stopLight" class="bulb"></div>
-        <div id="slowLight" class="bulb"></div>
-        <div id="goLight" class="bulb"></div>
-      </div>-->
+        <div id="stopLight-ys" class="bulb"></div>
+        <div id="slowLight-ys" class="bulb"></div>
+        <div id="goLight-ys" class="bulb"></div>
+      </div>
+      </div>
