resized and reorganized traffic lights

--- a/code/html/index.html
+++ b/code/html/index.html
@@ -5,32 +5,28 @@
 <script type="text/javascript" src="../javascript/script.js"></script>
 
         <div id="controlPanel">
-          <h1 id="stopButton" class="button">Stop</h1>
-          <h1 id="goButton" class="button">Go</h1>
+          <h id="stopButton" class="button">Stop</h>
+          <h id="goButton" class="button">Go</h>
         </div>
-        <div id="traffic-light-yn">
-          Y-Stoplight-North
+        <div id="traffic-light-yn" class="clear">
           <div id="stopLight-yn" class="bulb"></div>
           <div id="slowLight-yn" class="bulb"></div>
           <div id="goLight-yn" class="bulb"></div>
         </div>
         <div class="clear">     
           <div id="traffic-light-xe">
-            X-Stoplight-East
             <div id="stopLight-xe" class="bulb"></div>
             <div id="slowLight-xe" class="bulb"></div>
             <div id="goLight-xe" class="bulb"></div>
           </div>
         </div>
       <div id="traffic-light-xw">
-          X-Stoplight-West
         <div id="stopLight-xw" class="bulb"></div>
         <div id="slowLight-xw" class="bulb"></div>
         <div id="goLight-xw" class="bulb"></div>
       </div>
       <div class="clear"> 
       <div id="traffic-light-ys">
-          Y-Stoplight-South
         <div id="stopLight-ys" class="bulb"></div>
         <div id="slowLight-ys" class="bulb"></div>
         <div id="goLight-ys" class="bulb"></div>
