--- a/attendance/26-feb.html
+++ b/attendance/26-feb.html
@@ -3,10 +3,10 @@
     <title>26 February</title>
   </head>
   <h1>Group 1 Attendance</h1>
-  <h2>26 Februrary</h2>
+  <h2>26 February</h2>
   <ul>
     <li>Alex Darling - Present</li>
     <li>Michael Conroy - Here!</li>
-    <li>Roy Blahovec- Here<li>
+    <li>Roy Blahovec- Here</li>
   </ul>
 </html>
