--- a/code/html/index.html
+++ b/code/html/index.html
@@ -3,6 +3,7 @@
 <link href="../css/main.css" rel="stylesheet" type="text/css"/>
 <script type="text/javascript" src="../javascript/jquery-3.3.1.js"></script>
 <script type="text/javascript" src="../javascript/script.js"></script>
+<script type="text/javascript" src="../../libraries/p5/p5/p5.min.js"></script>
 <body>
   <div class="grid-container">
     <div class="grid-item-outside">
