partially functioning car movement

--- a/code/html/index.html
+++ b/code/html/index.html
@@ -4,6 +4,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.js"></script>
     <script src="../javascript/objects.js"></script>
     <script src="../javascript/script.js"></script>
+    <script src="../javascript/background.js"></script>
+    <script src="../javascript/functions.js"></script>
   </head>
   <body>
   </body>
