--- a/code/html/index.html
+++ b/code/html/index.html
@@ -7,6 +7,17 @@
     <script src="../javascript/background.js"></script>
     <script src="../javascript/functions.js"></script>
   </head>
-  <body>
+  <div>
+    <p>North Light:</p>
+    <p>East Light:</p>
+    <p>West Light:</p>
+    <p>South Light:</p>
+    <p>
+    <button type="button" onclick="numGen(50)">Low Traffic</button>
+    <button type="button" onclick="numGen(20)">Medium Traffic</button>
+    <button type="button" onclick="numGen(15)">High Traffic</button>
+    </p>
+  </div>
+  <body style="margin: 0; display: flex;  justify-content: center;">
   </body>
 </html>
