Random car colors

--- a/code/html/index.html
+++ b/code/html/index.html
@@ -13,9 +13,9 @@
     <p>West Light:</p>
     <p>South Light:</p>
     <p>
-    <button type="button" onclick="numGen(50)">Low Traffic</button>
-    <button type="button" onclick="numGen(20)">Medium Traffic</button>
-    <button type="button" onclick="numGen(15)">High Traffic</button>
+    <button type="button" onclick="">No Traffic</button>
+    <button type="button" onclick="">Low Traffic</button>
+    <button type="button" onclick="">High Traffic</button>
     </p>
   </div>
   <body style="margin: 0; display: flex;  justify-content: center;">
