--- a/code/html/index.html
+++ b/code/html/index.html
@@ -13,9 +13,9 @@
     <p>West Light:</p>
     <p>South Light:</p>
     <p>
-    <button type="button" onclick="">No Traffic</button>
-    <button type="button" onclick="">Low Traffic</button>
-    <button type="button" onclick="">High Traffic</button>
+    <input id="No" type="button" value="No Traffic" onclick="changeFrequency(777777777777777);" />
+    <input id="Low" type="button" value="Low Traffic" onclick="changeFrequency(200);" />
+    <input id="High" type="button" value="High Traffic" onclick="changeFrequency(90);" />
     </p>
   </div>
   <body style="margin: 0; display: flex;  justify-content: center;">
