--- a/code/html/index.html
+++ b/code/html/index.html
@@ -13,7 +13,7 @@
     <p>West Light:</p>
     <p>South Light:</p>
     <p>
-    <input id="Start" type="button" value="Start Simulation" onclick="startDeadSimulation();" />
+    <input id="Start" type="button" value="Start Simulation" onclick="startSimulation();" />
     <input id="Stop" type="button" value="Stop Simulation" onclick="stopSimulation();" />
     </p>
     <p>
