Changing to startSimulation()
Otherwise we can't pause / unpause the simulation

--- a/code/html/index.html
+++ b/code/html/index.html
@@ -9,7 +9,7 @@
   </head>
   <div>
     <p>
-    <input id="Start" type="button" value="Start Simulation" onclick="startDeadSimulation();" />
+    <input id="Start" type="button" value="Start Simulation" onclick="startSimulation();" />
     <input id="Stop" type="button" value="Stop Simulation" onclick="stopSimulation();" />
     </p>
     <p>
