--- a/code/html/index.html
+++ b/code/html/index.html
@@ -14,29 +14,29 @@
         <input id="Stop" type="button" value="Stop Simulation" onclick="stopSimulation();" />
       </p>
       <p>
-        <input id="No" type="button" value="No Traffic" onclick="changeFrequency(bigboi);" />
-        <input id="Low" type="button" value="Low Traffic" onclick="changeFrequency(low);" />
-        <input id="High" type="button" value="High Traffic" onclick="changeFrequency(high);" />
+        <input id="No" type="button" value="No Traffic" onclick="changeAllFrequencies(bigboi);" />
+        <input id="Low" type="button" value="Low Traffic" onclick="changeAllFrequencies(low);" />
+        <input id="High" type="button" value="High Traffic" onclick="changeAllFrequencies(high);" />
       </p>
       <p>
-        <input id="No" type="button" value="North No Traffic" onclick="changeNFrequency(bigboi);" />
-        <input id="Low" type="button" value="Low Traffic" onclick="changeNFrequency(low);" />
-        <input id="High" type="button" value="High Traffic" onclick="changeNFrequency(high);" />
+        <input id="No" type="button" value="North No Traffic" onclick="changeFrequency(0, bigboi);" />
+        <input id="Low" type="button" value="Low Traffic" onclick="changeFrequency(0, low);" />
+        <input id="High" type="button" value="High Traffic" onclick="changeFrequency(0, high);" />
       </p>
       <p>
-        <input id="No" type="button" value="East No Traffic" onclick="changeEFrequency(bigboi);" />
-        <input id="Low" type="button" value="Low Traffic" onclick="changeEFrequency(low);" />
-        <input id="High" type="button" value="High Traffic" onclick="changeEFrequency(high);" />
+        <input id="No" type="button" value="East No Traffic" onclick="changeFrequency(1, bigboi);" />
+        <input id="Low" type="button" value="Low Traffic" onclick="changeFrequency(1, low);" />
+        <input id="High" type="button" value="High Traffic" onclick="changeFrequency(1, high);" />
       </p>
         <p>
-        <input id="No" type="button" value="South No Traffic" onclick="changeSFrequency(bigboi);" />
-        <input id="Low" type="button" value="Low Traffic" onclick="changeSFrequency(low);" />
-        <input id="High" type="button" value="High Traffic" onclick="changeSFrequency(high);" />
+        <input id="No" type="button" value="South No Traffic" onclick="changeFrequency(2, bigboi);" />
+        <input id="Low" type="button" value="Low Traffic" onclick="changeFrequency(2, low);" />
+        <input id="High" type="button" value="High Traffic" onclick="changeFrequency(2, high);" />
       </p>
       <p>
-        <input id="No" type="button" value="West No Traffic" onclick="changeWFrequency(bigboi);" />
-        <input id="Low" type="button" value="Low Traffic" onclick="changeWFrequency(low);" />
-        <input id="High" type="button" value="High Traffic" onclick="changeWFrequency(high);" />
+        <input id="No" type="button" value="West No Traffic" onclick="changeFrequency(3, bigboi);" />
+        <input id="Low" type="button" value="Low Traffic" onclick="changeFrequency(3, low);" />
+        <input id="High" type="button" value="High Traffic" onclick="changeFrequency(3, high);" />
       </p>
     </div>
   </body>
