Red Green Yellow

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
         <input id="Low" type="button" value="Low Traffic" onclick="changeWFrequency(low);" />
         <input id="High" type="button" value="High Traffic" onclick="changeWFrequency(high);" />
       </p>
+      <p>
+        <input id="High" type="button" value="High Traffic" onclick="changeWFrequency(high);" />
+        <input id="High" type="button" value="High Traffic" onclick="changeWFrequency(high);" />
+      </p>
     </div>
   </body>
 </html>
