--- a/index.html
+++ b/index.html
@@ -39,18 +39,18 @@
         <input id="High" type="button" value="High Traffic" onclick="changeWFrequency(high);" />
       </p>
       <p>
-        <input id="NSLefts" type="button" value="North South Lefts" onclick="changeWFrequency(high);" />
-        <input id="EWLefts" type="button" value="East West Lefts" onclick="changeWFrequency(high);" />
+        <input id="NSLefts" type="button" value="North South Lefts" onclick="lightcontrol.manualUpdate("N", "bothLeft");" />
+        <input id="EWLefts" type="button" value="East West Lefts" onclick="lightcontrol.manualUpdate("E", "bothLeft");" />
       </p>
       <p>
-        <input id="NSStraight" type="button" value="North South Straight" onclick="changeWFrequency(high);" />
-        <input id="EWStraight" type="button" value="East West Straight" onclick="changeWFrequency(high);" />
+        <input id="NSStraight" type="button" value="North South Straight" onclick="lightcontrol.manualUpdate("N", "bothStraight");" />
+        <input id="EWStraight" type="button" value="East West Straight" onclick="lightcontrol.manualUpdate("E", "bothStaright");" />
       </p>
       <p>
-        <input id="NAll" type="button" value="North All" onclick="changeWFrequency(high);" />
-        <input id="EAll" type="button" value="East All" onclick="changeWFrequency(high);" />
-        <input id="SAll" type="button" value="South All" onclick="changeWFrequency(high);" />
-        <input id="WAll" type="button" value="West All" onclick="changeWFrequency(high);" />
+        <input id="NAll" type="button" value="North All" onclick="lightcontrol.manualUpdate("N", "singleDisplay");" />
+        <input id="EAll" type="button" value="East All" onclick="lightcontrol.manualUpdate("E", "singleDisplay");" />
+        <input id="SAll" type="button" value="South All" onclick="lightcontrol.manualUpdate("S", "singleDisplay");" />
+        <input id="WAll" type="button" value="West All" onclick="lightcontrol.manualUpdate("W", "singleDisplay")" />
       </p>
     </div>
   </body>
