--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
         <input id="Stop" type="button" value="Stop Simulation" onclick="stopSimulation();" />
       </p>
       <p>
-        <input id="No" type="button" value="No Traffic" onclick="changeFrequency(bigboi);" />
+        <input id="No" type="button" value="No Traffic" onclick="changeFrequency(tinytim);" />
         <input id="Low" type="button" value="Low Traffic" onclick="changeFrequency(low);" />
         <input id="High" type="button" value="High Traffic" onclick="changeFrequency(high);" />
       </p>
       <p>
-        <input id="No" type="button" value="North No Traffic" onclick="changeNFrequency(bigboi);" />
+        <input id="No" type="button" value="North No Traffic" onclick="changeNFrequency(tinytim);" />
         <input id="Low" type="button" value="Low Traffic" onclick="changeNFrequency(low);" />
         <input id="High" type="button" value="High Traffic" onclick="changeNFrequency(high);" />
       </p>
       <p>
-        <input id="No" type="button" value="East No Traffic" onclick="changeEFrequency(bigboi);" />
+        <input id="No" type="button" value="East No Traffic" onclick="changeEFrequency(tinytim);" />
         <input id="Low" type="button" value="Low Traffic" onclick="changeEFrequency(low);" />
         <input id="High" type="button" value="High Traffic" onclick="changeEFrequency(high);" />
       </p>
         <p>
-        <input id="No" type="button" value="South No Traffic" onclick="changeSFrequency(bigboi);" />
+        <input id="No" type="button" value="South No Traffic" onclick="changeSFrequency(tinytim);" />
         <input id="Low" type="button" value="Low Traffic" onclick="changeSFrequency(low);" />
         <input id="High" type="button" value="High Traffic" onclick="changeSFrequency(high);" />
       </p>
       <p>
-        <input id="No" type="button" value="West No Traffic" onclick="changeWFrequency(bigboi);" />
+        <input id="No" type="button" value="West No Traffic" onclick="changeWFrequency(tinytim);" />
         <input id="Low" type="button" value="Low Traffic" onclick="changeWFrequency(low);" />
         <input id="High" type="button" value="High Traffic" onclick="changeWFrequency(high);" />
       </p>
