greatest investment of our lives

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body style="margin: 0; display: flex;  justify-content: center;">
     <div>
+            <h1>TrafficSimulator.org</h1>
       <p>
         <input id="Start" type="button" value="Start Simulation" onclick="startSimulation();" />
         <input id="Stop" type="button" value="Stop Simulation" onclick="stopSimulation();" />
