--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@
   </head>
   <body style="margin: 0; display: flex;  justify-content: center;">
     <div>
-<<<<<<< HEAD
+      <h1>TrafficSimulator.org</h1>
       <h3> Start/Stop Simulation</h3>
-=======
-            <h1>TrafficSimulator.org</h1>
->>>>>>> f839eca682426c02575c8dbeb4058038034f62ee
       <p>
         <input id="Start" type="button" value="Start Simulation" onclick="startSimulation();" />
         <input id="Stop" type="button" value="Stop Simulation" onclick="stopSimulation();" />
@@ -21,37 +18,24 @@
       <h3> Traffic Levels- All Lanes</h3>
       <p>
         <input id="No" type="button" value="No Traffic" onclick="changeFrequency(tinytim);" />
-        <input type="range" min="10" max="200" value="50" step="5" oninput="changeNFrequency(this.value)" />
-        <!--<input id="Low" type="button" value="Low Traffic" onclick="changeFrequency(low);" />
-        <input id="High" type="button" value="High Traffic" onclick="changeFrequency(high);" />-->
+        <input type="range" min="200" max="800" value="500" step="5" oninput="changeFrequency(this.value)" />
       </p>
       <h3> Traffic levels- Each Lane</h3>
       <p>
         <input id="No" type="button" value="North No Traffic" onclick="changeNFrequency(tinytim);" />
-        <input type="range" min="10" max="200" value="50" step="5" oninput="changeNFrequency(this.value)" />
-        <!--<input id="Low" type="button" value="Low Traffic" onclick="changeNFrequency(low);" />
-        <input id="High" type="button" value="High Traffic" onclick="changeNFrequency(high);" />-->
+        <input type="range" min="200" max="800" value="500" step="5" oninput="changeNFrequency(this.value)" />
       </p>
       <p>
         <input id="No" type="button" value="East No Traffic" onclick="changeEFrequency(tinytim);" />
-        <input type="range" min="10" max="200" value="50" step="5" oninput="changeEFrequency(this.value)" />
-        <!--
-        <input id="Low" type="button" value="Low Traffic" onclick="changeEFrequency(low);" />
-        <input id="High" type="button" value="High Traffic" onclick="changeEFrequency(high);" />-->
+        <input type="range" min="200" max="800" value="500" step="5" oninput="changeEFrequency(this.value)" />
       </p>
         <p>
         <input id="No" type="button" value="South No Traffic" onclick="changeSFrequency(tinytim);" />
-        <input type="range" min="10" max="200" value="50" step="5" oninput="changeSFrequency(this.value)" />
-        <!--<input id="No" type="button" value="South No Traffic" onclick="changeSFrequency(bigboi);" />
-        <input id="Low" type="button" value="Low Traffic" onclick="changeSFrequency(low);" />
-        <input id="High" type="button" value="High Traffic" onclick="changeSFrequency(high);" />-->
+        <input type="range" min="200" max="800" value="500" step="5" oninput="changeSFrequency(this.value)" />
       </p>
       <p>
         <input id="No" type="button" value="West No Traffic" onclick="changeWFrequency(tinytim);" />
-        <input type="range" min="10" max="200" value="50" step="5" oninput="changeWFrequency(this.value)" />
-        <!--
-        <input id="Low" type="button" value="Low Traffic" onclick="changeWFrequency(low);" />
-        <input id="High" type="button" value="High Traffic" onclick="changeWFrequency(high);" />-->
+        <input type="range" min="200" max="800" value="500" step="5" oninput="changeWFrequency(this.value)" />
       </p>
       <h3>Light State- Lefts</h3>
       <p>
